--- a/_jadefiles/section-articles.jade
+++ b/_jadefiles/section-articles.jade
@@ -5,7 +5,9 @@ section.articles#articles
 		.col-50.flex.flex--center.order-first
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented Designing articles
+					p.home-lead.outdented Design articles
+
+					p.home-explain 탁구의 역동적인 느낌과 형태를 상징화하여 표현했다. 탁구라켓과 탁구대라인, 공의 움직임을 시각화하고 패턴화해서 탁구의 매력을 나타낼 수 있도록 진행했다.
 
 		.col-50.flex--center
 			.article-wrap
