--- a/_jadefiles/section-package.jade
+++ b/_jadefiles/section-package.jade
@@ -6,6 +6,8 @@ section.package#package
 				.desc-wrap
 					p.home-lead.outdented Package design
 
+					p.home-explain Spiral은 탁구용품 패키지이다. 스포츠의 젊고 활기찬 느낌을 주기위해 점, 선, 면을 역동적으로 배치하여 통통튀는 그래픽을 만들었고, 제품의 특징을 강조한 그래픽을 활용하여 프로페셔널한 느낌을 주었다. 
+
 		.col-50.flex--center.order-first
 			.article-wrap
 				{% for post in site.posts limit: 8 %}
