--- a/_jadefiles/section-poster.jade
+++ b/_jadefiles/section-poster.jade
@@ -1,13 +1,17 @@
 section.poster#poster
 	.flex.flex--center
-		.col-50.flex.flex--center.poster1
+
+		.col-50.flex.flex--center.order-first.poster1
 			.col-1
-				// p.home-lead
-				img(src="assets/img/poster3.jpg").design-img-copy
-				.cf
-				
+				.desc-wrap
+					p.home-lead.outdented Poster design
+
+					p.home-explain 자연보호 페스티벌 포스터. 사람의 핏줄과 나뭇잎의 잎맥의 특징을 활용하여 자연도 생명이 있다는 것을 강조했다. 포스터에 튀어나오는듯한 질감을 넣기위해 형압기법을 사용했다.	
+
 		.col-50.flex.flex--center.poster2
 			.col-1
 				// p.home-lead
+				img(src="assets/img/poster3.jpg").design-img-copy
+			.col-1
 				img(src="assets/img/poster4.jpg").design-img-copy
 				.cf
