--- a/_jadefiles/section-youtube.jade
+++ b/_jadefiles/section-youtube.jade
@@ -4,6 +4,8 @@ section.youtube#youtube
 		.col-1.order-first
 			p.home-lead.outdented Advertising design
 
+			p.home-explain 아이리버 BSE-30E 제품은 칼국수 이어폰으로 유명하다. 색색의 칼국수를 반죽하고 뽑아내는 장면으로 표현해 아이리버 칼국수 이어폰이 컬러풀하고 생동감있는 음질을 가진 제품이라는 장점을 표현하고자 했다. 
+
 		.col-1
 			.video-strip
 			.flex-video <iframe src="https://player.vimeo.com/video/173575061" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
