--- a/assets/css/3-sections/_home-editorial.sass
+++ b/assets/css/3-sections/_home-editorial.sass
@@ -22,8 +22,16 @@ section.editorial
 	.home-lead
 		margin-top: 450px
 		margin-left: 70px
-		
-	
+
+	// .home-explain
+ //    text-align: center
+ //    font-size: 10px
+ //    // margin-bottom: 150px
+
+ //    @media(max-width: 640px)
+ //      margin-top: 100px
+ //      margin-bottom: 30px		
+
 	// 웹에서 모바일로 변할때 hidden
 	.outdented
 		width: 800px
