--- a/assets/css/3-sections/_home-youtube.sass
+++ b/assets/css/3-sections/_home-youtube.sass
@@ -1,8 +1,9 @@
 section.youtube
 	background:
-		image: url(../img/bgb.png)
+		// image: url(../img/bgb.png)
 		position: center
 		size: cover
+		color: #F9F9F9
 	color: black
 	height: 500px
 	
@@ -12,13 +13,22 @@ section.youtube
 		justify-content: center
 
 	.home-lead
-		margin-left: 45px
+		margin-left: 23px
 
 		@media (max-width: 640px)
 			margin-left: 0px	
 
 	.home-cta
 		color: #e20a0a
+
+	//.home-explain
+    //text-align: center
+    //font-size: 15px
+    // margin-bottom: 150px
+
+    // @media(max-width: 640px)
+    //   margin-top: 100px
+    //   margin-bottom: 30px		
 
 	.flex-video
     box-shadow: 0px 4px 40px 3px rgba(0,0,0,0.5)
@@ -55,7 +65,7 @@ section.youtube
 		@media (max-width: 640px)
 			height: auto
 			display: block
-			padding: 50px 20px
+			padding: 30px 30px
 
 			&:last-child
 				padding: 0px 20px 50px
