--- a/_jadefiles/section-app2.jade
+++ b/_jadefiles/section-app2.jade
@@ -8,7 +8,9 @@ section.app2#app2
 		.col-50.flex.flex--center
 			.col-1
 				.desc-wrap
-					p.home-lead.outdented App design	
+					p.home-lead.outdented App design
+
+					p.home-explain 성형외과에 방문하지않고 사진과 글을 올려서 상담과 견적을 받는 앱 서비스, 직관적인 정보전달을 위해 픽토그램 형태의 flat icon 을 제작했다. 카테고리별로 색을 구분하여 효과적인 ui를 구축하려 함.
 				.cf
 
 		.col-50.flex.flex--center.dribbble.order-first(data-orig-color="#ea4c89")
