--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -9,6 +9,22 @@ section.notes
 	.home-lead
 		margin-top: 100px
 
+	img
+		padding: 20px
+		width: 400px
+
+		@media (max-width: 985px)
+			justify-content: center
+			width: 300px
+
+		@media (max-width: 320px)
+			justify-content: center
+			width: 270px
+
+
+	// .desc-wrap
+	// 	width: auto
+	// 	size: 100px	
 
 	.col-11
 		width: 350px
@@ -37,6 +53,7 @@ section.notes
 
 		p
 			margin: 20px 0 20px 0
+
 
 		&:first-child
 			padding-left: 30px
@@ -81,3 +98,10 @@ section.notes
 			margin-top: 80px
 			justify-content: center
 			padding: 0							
+
+		@media (max-width: 320px)
+			width: 245px
+			margin-top: 80px
+			padding: 10px
+			justify-content: center
+			padding: 0								
