--- a/assets/css/3-sections/_home-package.sass
+++ b/assets/css/3-sections/_home-package.sass
@@ -6,9 +6,32 @@ section.package
 		align-items: center
 		justify-content: center
 
+		@media (max-width: 640px)
+			height: auto
+			display: block
+			padding: 30px 30px
+
+			&:last-child
+				padding: 0px 30px 50px
+
 	.home-cta
 		color: white
 		background: #3d96cb
+	
+	.home-lead
+		margin-left: 45px
+	
+		@media (max-width: 640px)
+			margin-left: 0px	
+
+	// .home-explain
+ //    text-align: center
+ //    font-size: 15px
+ //    // margin-bottom: 150px
+
+ //    @media(max-width: 640px)
+ //      margin-top: 100px
+ //      margin-bottom: 30px		
 
 	.article-wrap
 		margin: 50px 0	
