--- a/assets/css/3-sections/_home-poster.sass
+++ b/assets/css/3-sections/_home-poster.sass
@@ -7,12 +7,13 @@
   .home-lead
     text-align: center
     font-size: 35px
-    margin-bottom: 40px
+    // margin-bottom: 40px
+    margin-top: 120px
 
   .poster1
     background:
-      // color: #E0EAA4
-      image: url(/assets/img/bgb.png)
+      color: #F9F9F9
+      // image: url(/assets/img/bgb.png)
       position: center
       size: cover
     padding: 100px 0
@@ -22,8 +23,7 @@
 
   .poster2
     background:
-      // color: #1769ff
-      image: url(/assets/img/bgb.png)
+      color: #F9F9F9
       position: center
       size: cover
     padding: 100px 0
@@ -35,11 +35,15 @@
     font-size: 24px
     color: #ea4c89
 
+  //.col-1
+    //width: auto
+
   .design-img-copy
     display: block
-    width: calc(100% - 14px)
+    width: 95%
     box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
     margin: 5px
+    float: left
 
   .cf
     clear: both
