--- a/assets/css/4-layouts/_home.sass
+++ b/assets/css/4-layouts/_home.sass
@@ -9,17 +9,26 @@
 	overflow: hidden
 	width: 100%
 
-
 .home-start
 	flex: 1
 	padding: 0px
-		
+	
+.home-explain
+  text-align: justify
+  font-size: 14px
+  line-height: 1.8
+  color: #4C4C4C
+  // margin-bottom: 150px
+
+  @media(max-width: 640px)
+    margin-top: 100px
+    margin-bottom: 30px
 
 .home-sections
 	flex: 1
 
 	section
-		padding: 50px 0
+		padding: 50px 0	
 
 
 	// flex classes
@@ -81,8 +90,8 @@
 	color: gray
 	
 
-	&.outdented
-		text-indent: -0.8em
+	//&.outdented
+		//text-indent: -0.8em
 
 @media (max-width: 640px)
 	.home-lead
