--- a/assets/css/3-sections/_home-icon.sass
+++ b/assets/css/3-sections/_home-icon.sass
@@ -20,7 +20,7 @@ section.icon
       padding: 30px 30px
 
       &:last-child
-        padding: 0px 30px 50px
+        padding: 0px 30px 0px
 
   .col-10
     width: 550px
@@ -92,36 +92,40 @@ section.icon
 
     @media (max-width: 1200px)
       width: 15%
-
+      padding: 0px
     @media (max-width: 985px)
       width: 20%
-
+      padding: 0px
     @media (max-width: 640px)
       width: 17%
-
+      padding: 0px
     @media (max-width: 560px)
       width: 16%
-
+      padding: 0px
     @media (max-width: 500px)
       width: 15%  
-
+      padding: 0px
     // nexus 6p  
     @media (max-width: 435px)
-      width: 12%  
-
+      width: 22%  
+      padding: 0px
+    // iphone 6
+    @media (max-width: 410px)
+      width: 24%
+      padding: 0px
     // iphone 6
     @media (max-width: 375px)
-      width: 19%
-
+      width: 22%
+      padding: 0px
     // galaxy s5  
     @media (max-width: 360px)
       width: 10%    
-
+      padding: 0px
     // iphone 5
     @media (max-width: 320px)
-      width: 17%
+      width: 20%
       height: 50px
-      
+      padding: 0px
     &:hover
       transform: scale(1.1)
 
