--- a/assets/css/3-sections/_home-package.sass
+++ b/assets/css/3-sections/_home-package.sass
@@ -10,6 +10,7 @@ section.package
 			height: auto
 			display: block
 			padding: 30px 30px
+			margin-top: 100px
 
 			&:last-child
 				padding: 0px 30px 50px
@@ -36,6 +37,10 @@ section.package
 	.article-wrap
 		margin: 50px 0	
 		+clearfix
+
+		@media (max-width: 640px)
+			margin: 0px	
+
 
 	.article-thumb
 		display: block
