--- a/assets/css/3-sections/_home-poster.sass
+++ b/assets/css/3-sections/_home-poster.sass
@@ -4,6 +4,18 @@
   section.poster
     color: white
 
+  .col-1
+    display: flex
+    align-items: center
+    justify-content: center
+
+    @media (max-width: 640px)
+      height: auto
+      padding: 5px
+
+      &:last-child
+        padding: 0px 30px 0px
+
   .home-lead
     text-align: center
     font-size: 35px
@@ -19,7 +31,9 @@
     padding: 100px 0
 
     @media (max-width: 640px)
-      display: none
+      padding: 10px 0
+      p
+        margin-bottom: 0
 
   .poster2
     background:
@@ -44,6 +58,9 @@
     box-shadow: 0px 3px 10px rgba(0,0,0,0.2)
     margin: 5px
     float: left
+
+    @media (max-width: 640px)
+      width: 55%
 
   .cf
     clear: both
