--- a/_jadefiles/section-poster.jade
+++ b/_jadefiles/section-poster.jade
@@ -6,7 +6,7 @@ section.poster#poster
 				.desc-wrap
 					p.home-lead.outdented Poster design
 
-					p.home-explain 자연보호 페스티벌 포스터. 사람의 핏줄과 나뭇잎의 잎맥의 특징을 활용하여 자연도 생명이 있다는 것을 강조했다. 포스터에 튀어나오는듯한 질감을 넣기위해 형압기법을 사용했다.	
+					p.home-explain 자연보호 페스티벌 포스터. 사람의 핏줄과 나뭇잎의 잎맥의 특징을 활용하여 자연도 생명이 있다는 것을 강조했다. 포스터에 형압 기법을 사용하여 핏줄과 잎맥의 질감을 입체적으로 표현했다.	
 
 		.col-50.flex.flex--center.poster2
 			.col-1
