--- a/_jadefiles/section-notes.jade
+++ b/_jadefiles/section-notes.jade
@@ -10,7 +10,7 @@ section.notes#note
 				.desc-wrap
 					p 시각디자인을 전공하고 편집, 패키지, 광고, 웹, 앱북, 일러스트 등 다양한 분야를 경험했습니다. 웹에서의 사용자 경험과 정보전달에 매력을 느껴 웹 개발과 ux/ui를 공부중에 있습니다. 
 	
-					p 평소 브랜드네이밍, 순수예술, 애니메이션 그리고 스포츠 를 좋아합니다.
+					p 브랜드네이밍, 순수예술, 애니메이션 그리고 스포츠를 좋아합니다.
 	
 	//- .flex.flex--center
 	//- 	.col-1
