--- a/assets/css/3-sections/_home-poster.sass
+++ b/assets/css/3-sections/_home-poster.sass
@@ -20,7 +20,7 @@
     text-align: center
     font-size: 35px
     // margin-bottom: 40px
-    margin-top: 120px
+    // margin-top: 120px
 
   .poster1
     background:
@@ -31,7 +31,7 @@
     padding: 100px 0
 
     @media (max-width: 640px)
-      padding: 10px 0
+      padding: 100px 0 0 0
       p
         margin-bottom: 0
 
