--- a/assets/css/3-sections/_home-footer.sass
+++ b/assets/css/3-sections/_home-footer.sass
@@ -2,14 +2,17 @@
 
   a
     color: white
-    background: #8F8F91
+    background: #f6f6f6
     display: block
     width: 100%
     line-height: 6
     text-align: center
-    font-size: 60px
+    font-size: 40px
     font-weight: 300
+    color: gray
     transition: background 150ms ease-in-out
+    font-family: helvetica
+    padding: 100px 0 
 
     @media (max-width: 895px)
       font-size: 50px
@@ -21,4 +24,5 @@
       font-size: 20px
 
     &:hover
-      background: darken(#D89F62, 8%)
+      background: darken(#D89F62, 1%)
+      color: white
