--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -10,8 +10,8 @@ section.notes
 		margin-top: 100px
 
 	img
-		padding: 20px
-		width: 400px
+		padding: 20p0
+		width: 300px
 
 		@media (max-width: 985px)
 			justify-content: center
@@ -60,7 +60,7 @@ section.notes
 			padding-left: 30px
 			padding-right: 60px
 			text-align: justify
-			border-left: solid 2px gray
+			border-left: solid 1px #B5B5B5
 
 		@media (max-width: 640px)
 			padding: 0 10px
