--- a/assets/css/3-sections/_home-editorial.sass
+++ b/assets/css/3-sections/_home-editorial.sass
@@ -68,6 +68,7 @@ section.editorial
 	.face
 		height: 120px
 		width: 200px
+		text-align: justify
 		background:
 			size: cover
 			position: center
@@ -90,7 +91,7 @@ section.editorial
 		bottom: 50%
 		margin-left: 10px
 		width: 290px
-		background: rgba(0,0,0,0.8)
+		background: rgba(0,0,0,0.5)
 		padding: 20px
 		border-radius: 40px 40px 40px 5px
 		border: 3px solid white
