--- a/_jadefiles/section-app2.jade
+++ b/_jadefiles/section-app2.jade
@@ -15,7 +15,7 @@ section.app2#app2
 
 		.col-50.flex.flex--center.dribbble.order-first(data-orig-color="#ea4c89")
 			.col-1
-				img(src="assets/img/iphone.png").design-img-copy
+				img(src="assets/img/iphone-gold.png").design-img-copy
 				.cf
 
 		
