--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -10,7 +10,7 @@ section.notes
 		margin-top: 100px
 
 	img
-		padding: 20p0
+		padding: 200
 		width: 300px
 
 		@media (max-width: 985px)
@@ -27,14 +27,14 @@ section.notes
 	// 	size: 100px	
 
 	.col-11
-		width: 350px
+		width: 300px
 		margin: 200px 0px 70px 40px 
-		padding-right: 30px
-		padding-left: 30px
+		// padding-right: 30px
+		// padding-left: 30px
 		
 		@media (max-width: 640px)
 			justify-content: center
-			margin: 60px auto
+			margin: auto
 
 		@media (max-width: 375px)
 			margin: 60px 0px 0px 5px 
