--- a/assets/css/3-sections/_home-app2.sass
+++ b/assets/css/3-sections/_home-app2.sass
@@ -19,6 +19,7 @@ section.app2
       height: auto
       display: block
       padding: 30px 30px
+      width: auto
 
       &:last-child
         padding: 0px 30px 50px
