--- a/_jadefiles/section-editorial.jade
+++ b/_jadefiles/section-editorial.jade
@@ -13,11 +13,11 @@ section.editorial#editorial
 
 		.col-1
 			ul.faces
-				+face("/assets/img/editorials/ed-1.png","혼자사는사람이 급증하고 있다. 왜 이런 현상이 나타나고 있으며, 혼자 라는건 어떤 의미일까? 사회가 변하며 혼자가 된 사람들, 내가 변해 혼자가 된 사람들 등 다양한 종류의 1인가구가 있다. 외롭고 쓸쓸한 1인가구에게 세상과 소통하는 방법을 제시한다.","- 1인가구 소통프로젝트_ 일인극 -")
+				+face("/assets/img/editorials/ed-1.png","나의 어렸을적 꿈은 멋진 집에서 내가 원하는 인테리어로 집을 꾸미고 내가 좋아하는 취미생활을 하며'혼자'서 멋지게 사는 것이였다. 간섭받지 않고 내가 하고싶은데로 멋있게 사는것. 하지만 현실은 달랐다 혼자살기엔 무서운 세상이였고, 가족을 떠나 혼자 나와 사는건 상상보다 힘든 일이였다.","- 1인가구 소통프로젝트_ 일인극 -")
 
 				+face("/assets/img/editorials/ed-2.png","인류 역사상 소통이 가장 활발한 시대, 어딜가든 나는 소통을 해야한다. 누구든 이러한 소통의 세상에 지칠때가 있다. 가끔은 혼자 살고싶다는 상상을 한다. 아무도 간섭하지 않는 나만의 세상에서.","- 1인가구 소통프로젝트_ 일인극 -")
 
-				+face("/assets/img/editorials/ed-3.png","나의 어렸을적 꿈은 멋진 집에서 내가 원하는 인테리어로 집을 꾸미고 내가 좋아하는 취미생활을 하며'혼자'서 멋지게 사는 것이였다. 간섭받지 않고 내가 하고싶은데로 멋있게 사는것. 하지만 현실은 달랐다 혼자살기엔 무서운 세상이였고, 가족을 떠나 혼자 나와 사는건 상상보다 힘든 일이였다.","- 1인가구 소통프로젝트_ 일인극 -")
+				+face("/assets/img/editorials/ed-3.png","혼자사는사람이 급증하고 있다. 왜 이런 현상이 나타나고 있으며, 혼자 라는건 어떤 의미일까? 사회가 변하며 혼자가 된 사람들, 내가 변해 혼자가 된 사람들 등 다양한 종류의 1인가구가 있다. 외롭고 쓸쓸한 1인가구에게 세상과 소통하는 방법을 제시한다.","<------ Image Click")
 				
 				+face("/assets/img/editorials/ed-4.png","사람들의 1인가구에 대한 인식은 어떨까? 시대가 많이 바뀌었다고는 하지만 혼자사는 청춘을 바라보는 어른들의 시선을 그리 곱지만은 않다. 빨리 결혼해서 자식을 낳아야 하지 않겠느냐, 왜 혼자살려고 하느냐 등 따가운 잔소리가 따라다닌다.","- 1인가구 소통프로젝트_ 일인극 -")
 				
