--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -771,7 +771,7 @@ section.editorial {
     bottom: 50%;
     margin-left: 10px;
     width: 290px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.4);
     padding: 20px;
     border-radius: 40px 40px 40px 5px;
     border: 3px solid white;
@@ -1287,7 +1287,8 @@ section.app2 {
       section.app2 .col-1 {
         height: auto;
         display: block;
-        padding: 30px 30px; }
+        padding: 30px 30px;
+        width: auto; }
         section.app2 .col-1:last-child {
           padding: 0px 30px 50px; } }
   section.app2 .home-lead {
