--- a/_jadefiles/section-icon.jade
+++ b/_jadefiles/section-icon.jade
@@ -10,7 +10,7 @@ section.icon#icon
 				.desc-wrap
 					p.home-lead.outdented Icon design	
 
-					p.home-explain 사용자가 아이콘을 쉽게 인지할 수 있도록 컬러와 픽토그램을 활용하여 아이콘을 제작했다. 라인을 두껍게 하여 심플한 느낌을 주어 호감도를 높였다.
+					p.home-explain 자칫 부담스럽게 보일 수 있는 신체부위를 사용자가 편하게 인지할 수 있도록 컬러와 픽토그램을 활용하여 아이콘으로 제작했으며, 라인과 배경컬러만을 활용하여 심플함을 더했다.
 				.cf
 
 		.col-50.flex.flex--center.behance(data-orig-color="#F6F6F6")
