--- a/assets/css/3-sections/_home-about.sass
+++ b/assets/css/3-sections/_home-about.sass
@@ -1,6 +1,6 @@
 section.about
 	background: 
-		image: url(../img/about.png)
+		image: url(../img/about2.png)
 		position: center
 		//이미지사이즈를 크기에 맞춰줌
 		size: cover
