--- a/_jadefiles/header.jade
+++ b/_jadefiles/header.jade
@@ -5,7 +5,7 @@ mixin nav-content()
     li: a(href="#editorial") Editorial
     li: a(href="#youtube") Advertise
     li: a(href="#package") Package
-    li: a(href="#articles") Articles
+    li: a(href="#articles") Artwork
     li: a(href="#app2") App
     li: a(href="#icon") Icon
     li: a(href="#note") Note
