--- a/assets/css/3-sections/_home-notes.sass
+++ b/assets/css/3-sections/_home-notes.sass
@@ -15,11 +15,12 @@ section.notes
 
 		@media (max-width: 985px)
 			justify-content: center
-			width: 300px
+			width: 300px	
 
-		@media (max-width: 320px)
+		@media (max-width: 330px)
 			justify-content: center
 			width: 270px
+			margin-left: 15px
 
 
 	// .desc-wrap
@@ -36,15 +37,15 @@ section.notes
 			justify-content: center
 			margin: auto
 
-		@media (max-width: 375px)
-			margin: 60px 0px 0px 5px 
-			justify-content: center
-			padding: 0
+		// @media (max-width: 375px)
+		// 	margin: 60px 0px 0px 5px 
+		// 	justify-content: center
+		// 	padding: 0
 	
 	.col-1
 		width: 390px
 		padding-left: 30px
-		margin: 130px 0px 70px 40px 
+		margin: 130px 0px 70px 35px 
 		font-size: 14px
 		line-height: 1.8
 		justify-content: center
